Add tests that test sending cloudwatch and cloudtrail logs via mocked http requests.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "test": "jest src",
     "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
   },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
+  },
   "devDependencies": {
-    "jsdom": "11.11.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.7.0",
-    "jest": "^22.1.4"
+    "jest": "^22.1.4",
+    "jsdom": "11.11.0",
+    "nock": "^9.6.1"
   },
   "dependencies": {
     "aws-sdk": "^2.268.1"
