S3 bucket files parsing and publish support added. Signed-off-by: Arpit Singhal <sarpit@vmware.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "jest": {
     "verbose": true,
     "testURL": "http://localhost/",
-    "testPathIgnorePatterns": ["<rootDir>/test/helper.test.js", "<rootDir>/node_modules/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/test/helper.test.js",
+      "<rootDir>/node_modules/"
+    ]
   },
   "devDependencies": {
     "eslint": "^4.16.0",
