--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "jest": {
     "verbose": true,
     "testURL": "http://localhost/",
-    "testPathIgnorePatterns": ["<rootDir>/test/helper.test.js", "<rootDir>/node_modules/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/test/helper.test.js",
+      "<rootDir>/node_modules/"
+    ]
   },
   "devDependencies": {
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.7.0",
-    "jest": "^22.1.4",
+    "jest": "^22.4.4",
     "jsdom": "11.11.0",
     "nock": "^9.6.1"
   },
