[LINT-13647] Lambda code fixes signed off by Saranya Selvakumar<sselvakumar@vmware.com>

--- a/aws/templates/aws-template-cli.yaml
+++ b/aws/templates/aws-template-cli.yaml
@@ -31,5 +31,5 @@ Resources:
       Timeout: 900
       Environment:
         Variables:
-            LogIntelligence_API_Token: !Ref APIToken
-            LogIntelligence_API_Url: !Ref APIUrl
+            VRLIC_API_Token: !Ref APIToken
+            VRLIC_API_Url: !Ref APIUrl
