--- a/aws/templates/aws-template.yaml
+++ b/aws/templates/aws-template.yaml
@@ -8,7 +8,7 @@ Parameters:
         Default: ""
     APIUrl:
         Type: "String"
-        Description: "Data Url of vRealize Log Insight Cloud or Wavefront proxy(Note: APIToken is not required for Wavefront proxy URL)"
+        Description: "Data Url of vRealize Log Insight Cloud or Wavefront proxy"
         Default: ""
 
     APIToken:
